...
                }
            }


            item {
                Text(
                    text = "Popular categories",
                    color = BlackPrimary,
                    style = MaterialTheme.typography.titleLarge
                )
                Spacer(modifier = Modifier.height(12.dp))

                LazyRow(horizontalArrangement = Arrangement.spacedBy(16.dp)) {
...
